[project]
name = "rao-teaw-duay-kan-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Alifriduwan",email = "6510110565@email.psu.ac.th"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
